--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "Jetty <kmclo@naver.com>",
   "license": "MIT",
   "scripts": {
-    "start": "tsc-watch --onSuccess \" node dist/index.js\" "
+    "start": "tsc-watch --onSuccess \" node ./dist/index.js\" --compiler %USERPROFILE%\\AppData\\Local\\Yarn\\bin\\tsc "
   },
   "devDependencies": {
     "tsc-watch": "^4.1.0"
